RTCEth/Import Declarations/Visual Basic .NET/RTC4ethImport.vb

    Declare Sub      set_scanner_delays Lib "RTC4ethDLL.DLL" (ByVal jumpdelay As UShort, ByVal markdelay As UShort, ByVal polydelay As UShort)
    Declare Sub      n_set_list_jump Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal position As UShort)
    Declare Sub      set_list_jump Lib "RTC4ethDLL.DLL" (ByVal position As UShort)
    Declare Sub      n_set_input_pointer Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal pointer As UShort)
    Declare Sub      set_input_pointer Lib "RTC4ethDLL.DLL" (ByVal pointer As UShort)
    Declare Sub      n_list_call Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal position As UShort)
    Declare Sub      list_call Lib "RTC4ethDLL.DLL" (ByVal position As UShort)
    Declare Sub      n_list_return Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      list_return Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_z_out_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal z As Short)
    Declare Sub      z_out_list Lib "RTC4ethDLL.DLL" (ByVal z As Short)
    Declare Sub      n_set_standby_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal half_period As UShort, ByVal pulse As UShort)
    Declare Sub      set_standby_list Lib "RTC4ethDLL.DLL" (ByVal half_period As UShort, ByVal pulse As UShort)
    Declare Sub      n_timed_jump_abs Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short, ByVal time As Double)
    Declare Sub      timed_jump_abs Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short, ByVal time As Double)
    Declare Sub      n_timed_mark_abs Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short, ByVal time As Double)
    Declare Sub      timed_mark_abs Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short, ByVal time As Double)
    Declare Sub      n_timed_jump_rel Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal dx As Short, ByVal dy As Short, ByVal time As Double)
    Declare Sub      timed_jump_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Short, ByVal dy As Short, ByVal time As Double)
    Declare Sub      n_timed_mark_rel Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal dx As Short, ByVal dy As Short, ByVal time As Double)
    Declare Sub      timed_mark_rel Lib "RTC4ethDLL.DLL" (ByVal dx As Short, ByVal dy As Short, ByVal time As Double)
    Declare Sub      n_set_laser_timing Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal halfperiod As UShort, ByVal pulse1 As UShort, ByVal pulse2 As UShort, ByVal timebase As UShort)
    Declare Sub      set_laser_timing Lib "RTC4ethDLL.DLL" (ByVal halfperiod As UShort, ByVal pulse1 As UShort, ByVal pulse2 As UShort, ByVal timebase As UShort)
    Declare Sub      n_set_wobbel Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal amplitude As UShort, ByVal frequency As Double)
    Declare Sub      set_wobbel Lib "RTC4ethDLL.DLL" (ByVal amplitude As UShort, ByVal frequency As Double)
    Declare Sub      n_set_wobbel_xy Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal long_wob As UShort, ByVal trans_wob As UShort, ByVal frequency As Double)
    Declare Sub      set_wobbel_xy Lib "RTC4ethDLL.DLL" (ByVal long_wob As UShort, ByVal trans_wob As UShort, ByVal frequency As Double)
    Declare Sub      n_set_fly_x Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal kx As Double)
    Declare Sub      set_fly_x Lib "RTC4ethDLL.DLL" (ByVal kx As Double)
    Declare Sub      n_set_fly_y Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal ky As Double)
    Declare Sub      set_fly_y Lib "RTC4ethDLL.DLL" (ByVal ky As Double)
    Declare Sub      n_set_fly_rot Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal resolution As Double)
    Declare Sub      set_fly_rot Lib "RTC4ethDLL.DLL" (ByVal resolution As Double)
    Declare Sub      n_fly_return Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As Short, ByVal y As Short)
    Declare Sub      fly_return Lib "RTC4ethDLL.DLL" (ByVal x As Short, ByVal y As Short)
    Declare Sub      n_calculate_fly Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal direction As UShort, ByVal distance As Double)
    Declare Sub      calculate_fly Lib "RTC4ethDLL.DLL" (ByVal direction As UShort, ByVal distance As Double)
    Declare Sub      n_write_io_port_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_io_port_list Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_select_cor_table_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal heada As UShort, ByVal headb As UShort)
    Declare Sub      select_cor_table_list Lib "RTC4ethDLL.DLL" (ByVal heada As UShort, ByVal headb As UShort)
    Declare Sub      n_set_wait Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      set_wait Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_simulate_ext_start Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal delay As Short, ByVal encoder As Short)
    Declare Sub      simulate_ext_start Lib "RTC4ethDLL.DLL" (ByVal delay As Short, ByVal encoder As Short)
    Declare Sub      n_write_da_x_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal x As UShort, ByVal value As UShort)
    Declare Sub      write_da_x_list Lib "RTC4ethDLL.DLL" (ByVal x As UShort, ByVal value As UShort)
    Declare Sub      n_set_pixel_line Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal pixelmode As UShort, ByVal pixelperiod As UShort, ByVal dx As Double, ByVal dy As Double)
    Declare Sub      set_pixel_line Lib "RTC4ethDLL.DLL" (ByVal pixelmode As UShort, ByVal pixelperiod As UShort, ByVal dx As Double, ByVal dy As Double)
    Declare Sub      n_set_pixel Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal pulswidth As UShort, ByVal davalue As UShort, ByVal adchannel As UShort)
    Declare Sub      set_pixel Lib "RTC4ethDLL.DLL" (ByVal pulswidth As UShort, ByVal davalue As UShort, ByVal adchannel As UShort)
    Declare Sub      n_set_extstartpos_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal position As UShort)
    Declare Sub      set_extstartpos_list Lib "RTC4ethDLL.DLL" (ByVal position As UShort)
    Declare Sub      n_laser_signal_on_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      laser_signal_on_list Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_laser_signal_off_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      laser_signal_off_list Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_set_firstpulse_killer_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal fpk As UShort)
    Declare Sub      set_firstpulse_killer_list Lib "RTC4ethDLL.DLL" (ByVal fpk As UShort)
    Declare Sub      n_set_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal mask_set As UShort)
    Declare Sub      set_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal mask_set As UShort)
    Declare Sub      n_clear_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal mask_clear As UShort)
    Declare Sub      clear_io_cond_list Lib "RTC4ethDLL.DLL" (ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal mask_clear As UShort)
    Declare Sub      n_list_jump_cond Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal position As UShort)
    Declare Sub      list_jump_cond Lib "RTC4ethDLL.DLL" (ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal position As UShort)
    Declare Sub      n_list_call_cond Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal position As UShort)
    Declare Sub      list_call_cond Lib "RTC4ethDLL.DLL" (ByVal mask_1 As UShort, ByVal mask_0 As UShort, ByVal position As UShort)
    Declare Function n_get_input_pointer Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_input_pointer Lib "RTC4ethDLL.DLL" () As UShort
    Declare Function rtc4_max_cards Lib "RTC4ethDLL.DLL" () As UShort
    Declare Sub      n_get_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByRef busy As UShort, ByRef position As UShort)
    Declare Sub      get_status Lib "RTC4ethDLL.DLL" (ByRef busy As UShort, ByRef position As UShort)
    Declare Function n_read_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function read_status Lib "RTC4ethDLL.DLL" () As UShort
    Declare Function n_get_startstop_info Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_startstop_info Lib "RTC4ethDLL.DLL" () As UShort
    Declare Function n_get_marking_info Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function get_marking_info Lib "RTC4ethDLL.DLL" () As UShort
    Declare Function get_dll_version Lib "RTC4ethDLL.DLL" () As UShort
    Declare Sub      n_set_start_list_1 Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      set_start_list_1 Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_set_start_list_2 Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      set_start_list_2 Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_set_start_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal listno As UShort)
    Declare Sub      set_start_list Lib "RTC4ethDLL.DLL" (ByVal listno As UShort)
    Declare Sub      n_execute_list_1 Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      execute_list_1 Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_execute_list_2 Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      execute_list_2 Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_execute_list Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal listno As UShort)
    Declare Sub      execute_list Lib "RTC4ethDLL.DLL" (ByVal listno As UShort)
    Declare Sub      n_write_8bit_port Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_8bit_port Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_write_io_port Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_io_port Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Function n_eth_status Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As Integer
    Declare Function eth_status Lib "RTC4ethDLL.DLL" () As Integer
    Declare Sub      n_auto_change Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      auto_change Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_auto_change_pos Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal start As UShort)
    Declare Sub      auto_change_pos Lib "RTC4ethDLL.DLL" (ByVal start As UShort)
    Declare Sub      aut_change Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_start_loop Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      start_loop Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_quit_loop Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      quit_loop Lib "RTC4ethDLL.DLL" ()
    Declare Sub      n_stop_execution Lib "RTC4ethDLL.DLL" (ByVal n As UShort)
    Declare Sub      stop_execution Lib "RTC4ethDLL.DLL" ()
    Declare Function n_read_io_port Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As UShort
    Declare Function read_io_port Lib "RTC4ethDLL.DLL" () As UShort
    Declare Sub      n_write_da_1 Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_da_1 Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_write_da_2 Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal value As UShort)
    Declare Sub      write_da_2 Lib "RTC4ethDLL.DLL" (ByVal value As UShort)
    Declare Sub      n_set_max_counts Lib "RTC4ethDLL.DLL" (ByVal n As UShort, ByVal counts As Integer)
    Declare Sub      set_max_counts Lib "RTC4ethDLL.DLL" (ByVal counts As Integer)
    Declare Function n_get_counts Lib "RTC4ethDLL.DLL" (ByVal n As UShort) As Integer
    Declare Function get_counts Lib "RTC4ethDLL.DLL" () As Integer
